add support for compile and run to Java 17